dataset1235/2025-2/610742602/users/2447224811/executions/2563853024_1630070338.log
== SUBMISSION (2025-09-02 20:26:04)
-- CODE: 
numero = int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-100.0'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.1'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-4.5'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:27:09)
-- CODE: 
numero =(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:34)
-- CODE: 
numero = int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-100.0'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.1'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-4.5'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:26:44)
-- CODE: 
numero =float(int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:27:02)
-- CODE: 
numero =(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:18:22)
-- CODE: 
numero = float(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
insira o numero25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
insira o numero110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
insira o numero10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
insira o numero146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
insira o numero20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
insira o numero4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:18:28)
-- CODE: 
numero = float(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
insira o numero25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
insira o numero110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
insira o numero10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
insira o numero146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
insira o numero20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
insira o numero4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:27:03)
-- CODE: 
numero =(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:27:21)
-- CODE: 
numero =float((input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero =float((input())
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero =float((input())
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero =float((input())
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero =float((input())
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero =float((input())
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero =float((input())
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:26:00)
-- CODE: 
numero = int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-100.0'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.1'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-4.5'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:26:44)
-- CODE: 
numero =float(int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero =float(int(input("insira o numero"))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:26:05)
-- CODE: 
numero = int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-100.0'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.1'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-4.5'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:25:36)
-- CODE: 
numero = int(input("insira o numero"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-100.0'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.1'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-4.5'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input("insira o numero"))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:27:25)
-- CODE: 
numero =float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
